Конкурс все почався доробив)))

--- a/pages/food.html
+++ b/pages/food.html
@@ -6,6 +6,7 @@
   <title>Шкільна їдальня</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap" rel="stylesheet" />
   <style>
+/* Загальні стилі для тіла */
 body {
   font-family: "Orbitron", sans-serif;
   background: linear-gradient(120deg, #ff9a9e 0%, #66a6ff 100%);
@@ -14,8 +15,10 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Задаємо мінімальну висоту для тіла */
+  min-height: 100vh; /* Мінімальна висота для тіла */
 }
+
+/* Стиль для хедера */
 header {
   background-color: #000; /* Непрозорий чорний колір */
   padding: 20px;
@@ -25,7 +28,7 @@ header {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-
+/* Стилі для навігації */
 header nav ul {
   display: flex;
   justify-content: center;
@@ -54,21 +57,23 @@ header nav ul li a:hover {
   text-shadow: 0 0 8px #ff9a9e;
 }
 
+/* Основний контент */
 .main-content {
   padding: 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   justify-items: center;
-  flex-grow: 1; /* Дозволяє основному контенту займати весь доступний простір */
+  flex-grow: 1; /* Займає весь доступний простір */
   margin-bottom: 60px; /* Резервує місце для футера */
 }
 
+/* Стилі для елементів меню */
 .menu-item {
   background-color: rgba(0, 0, 0, 0.6);
   border-radius: 10px;
   padding: 20px;
-  width: 180px; /* Зменшили ширину, щоб блоки не були занадто великими */
+  width: 180px; /* Зменшили ширину */
   text-align: center;
   transition: transform 0.3s ease;
 }
@@ -110,23 +115,27 @@ header nav ul li a:hover {
 .menu-item:hover {
   transform: scale(1.05);
 }
-header {
-        background-color: #000; /* Непрозорий чорний колір */
-        padding: 20px;
-        position: sticky;
-        top: 0;
-        z-index: 100;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        
-      }
-      footer {
-        background-color: #000; /* Непрозорий чорний колір */
-        padding: 20px;
-        text-align: center;
-        position: relative;
-        width: 100%;
-        bottom: 0;
-      }
+
+/* Футер */
+footer {
+  background-color: #000;
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  width: 100%;
+  bottom: 0;
+}
+
+/* Адаптивність для мобільних пристроїв */
+@media (max-width: 768px) {
+  .main-content {
+    grid-template-columns: 1fr; /* Один стовпець на малих екранах */
+  }
+
+  .menu-item {
+    width: 100%; /* Блоки займуть всю ширину екрану */
+  }
+}
 
 
 
